# biais_llm_rec

./: .config  .config_template  .gitignore  README.md  analysis_action_movie.py  analysis_context_movie.py  analysis_gemma_llama.py  analysis_model_aggregated.py  analysis_models_size.py  analysis_western_movie.py  college.ipynb  college.json  config_inference  eval.ipynb  get_overall_stats.py  inference.ipynb  inference.py  metrics.py  model_config.py  model_inf.py  movies.json  pipeline.ipynb  pipeline.sh  pyproject.toml  requirements.txt  requirements_with_vllm.txt  result.py  results.py  results_google_gemma-3-4b-it_college.json  results_llama3.2_college.json  run_inference.sbatch  setup.py  tables.ipynb  users.py  utils.py  visualization.ipynb  visualization.py
analysis/: analysis_context_movie.py  analysis_gemma_llama.py  analysis_model_aggregated.py  analysis_models_size.py  analysis_western_movie.py  visualization.ipynb  visualization.py
config/: config_inference  model_config.json
data/: sensitive_atributes.json  sensitive_attributes.json
data/datasets/: college.json  college_small.json  movie.json  movies.json  music.json
data/dev/: config_inference  sensitive_attributes.json
data/metric_results/: gemma3_12b_college_.json  gemma3_12b_college_mathy.json  gemma3_12b_college_student.json  gemma3_12b_movie_,.json  gemma3_12b_movie_.json  gemma3_12b_movie_action_movie_fan.json  gemma3_12b_movie_movie_fan.json  gemma3_12b_music_.json  gemma3_12b_music_music_fan.json  (+111 more)
dataset/: music.json
dataset_creation/: college.ipynb  college.py  movie.ipynb  movie.py  movies.ipynb  music.ipynb  music.py
utils/: metrics.py  utils.py
(+682 files in other folders)
