[project]
name = "biais-llm-rec"
version = "0.1.0"
description = "LLM Recommendation Bias Analysis"
readme = "README.md"
requires-python = ">=3.11"

[project.optional-dependencies]
vllm = [
    "torch==2.4.0",
    "torchvision==0.19.0",
    "torchaudio==2.4.0",
    "vllm>=0.5.4", 
    "transformers>=4.37",
    "sentencepiece>=0.2",
    "safetensors>=0.5",
    "huggingface-hub==0.30.1",
    "setuptools==80.9.0",
]

ollama = [
    "ollama==0.4.7",
    "jinja2==3.1.6",
    "markupsafe==3.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["utils"]
