[project]
name = "biais-llm-rec"
version = "0.1.0"
description = "LLM Recommendation Bias Analysis"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # --- CORE ---
    "torch",
    "vllm>=0.11.2",             # Must be this new for B200
    "xformers",
    "transformers>=4.37",
    "sentencepiece>=0.2",
    "safetensors>=0.5",
    "huggingface-hub>=0.30.1",
    "setuptools",
    "pandas",
    "thefuzz",       
    "matplotlib",    
    "seaborn",      
    ]

[dependency-groups]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["utils"]

# --- UV CONFIGURATION ---
[tool.uv]

# 1. Use the standard PyPI index
# (vLLM 0.11.2 on PyPI includes the B200-compatible kernels you had running earlier)
[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"